# Wavy

./: .env  .gitignore  API.md  BACKEND_TODOS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  NOTICE  README.md  UPLOAD_AND_AUTH.md  docker-compose.yml  docs.md  run_dev.sh  web.html  web.html.backup
backend/: Cargo.toml  NEW.md  README.md  TODO.md  convert.sh  decompiler.html  test.json  web.backup.html  web.html
backend/documents/: NOTES.md  REST_API.md  TODO.md
backend/migrations/: 1_create_artists_table.sql  2_create_albums_table.sql  3_create_tags_table.sql  4_create_songs_table.sql  5_create_users_table.sql  8_add_listen_time_to_users.sql  9_add_has_image_to_songs.sql
backend/src/: auth.rs  config.rs  error.rs  handlers.rs  main.rs  state.rs
backend/src/orm/: mod.rs
backend/src/orm/albums/: mod.rs
backend/src/orm/artists/: handlers.rs  mod.rs
backend/src/orm/songs/: handlers.rs  repository.rs  upload.rs
backend/src/orm/tags/: mod.rs  models.rs  repository.rs
backend/src/orm/users/: mod.rs  models.rs  repository.rs
backend/src/rhythm/: compiler.rs
backend/src/streaming/: broadcaster.rs  handlers.rs  loader.rs  mod.rs  model.rs
frontend/: ARCHITECTURAL_AUDIT.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  template.tsx
frontend/src/components/: ActiveListeners.tsx  Background.tsx  ClientLayout.tsx  HeroPlayer.tsx  Leaderboard.tsx  ListenerStats.tsx  MenuSidebar.tsx  Navbar.tsx  NowPlaying.tsx  RadioPlayer.tsx  RhythmDebugger.tsx  ScrollableListeners.tsx  Search.tsx  SongVisual.tsx
frontend/src/lib/: api.ts  (+2 more)
installer/: dependencies.sh  installer.sh  nginx.sh  service.sh  uninstall.sh
installer/services/: backend.service  frontend.service
migrations/: 4_create_songs_table.sql  5_create_users_table.sql  6_create_song_artists_table.sql  7_create_song_tags_table.sql
src/: auth.rs  handlers.rs  loader.rs  main.rs  state.rs
(+33 files in other folders)
