[package]
name = "Wavy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
bytes = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6", features = ["fs", "cors"] }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
symphonia = { version = "0.5", features = ["mp3", "isomp4"] }
argon2 = "0.5"
axum-extra = { version = "0.10", features = ["cookie", "cookie-private", "multipart"] } # Check version for axum 0.8
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "macros"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1.0"
time = "0.3"
rmp-serde = "1.1"
flate2 = "1.0"
base64 = "0.22"
